/*
 * $Id: ChangeLog,v 1.1117 2003/06/15 14:26:28 patrickmast Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-06-14 14:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    + Added LValue support for string instance var as array.
